fixing layout problems on portrait-land mode

--- a/css/style.css
+++ b/css/style.css
@@ -372,7 +372,7 @@ b {
     align-items: center;
 
     background-color: var(--color-olive);
-    border-radius: var(--round-corners);
+    border-radius: 1000px;
 }
 #hud > #score 
 {
